// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`llk add error recovery works 1`] = `
"{
  'start': 0,
  'end': 2,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 3,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': 'NUMBER',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 7,
      'id': 3,
      'isWrap': true
    },
    {
      'start': 1,
      'end': 2,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 2,
      'lastColumn': 3,
      'token': '+',
      'type': 'token',
      'text': '+'
    },
    {
      'start': 2,
      'end': 2,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 3,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 2,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 3,
          'token': 'NUMBER',
          'type': 'token',
          'text': '0',
          'recovery': 'add'
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 7,
      'id': 7,
      'isWrap': true
    }
  ],
  'ruleIndex': 2,
  'internalRuleIndex': 4,
  'id': 11,
  'isWrap': true
}"
`;

exports[`llk add error recovery works 2`] = `
"{
  'recovery': true,
  'errorMessage': 'syntax error at line 1:\\\\n1+\\\\n--^\\\\n'-', 'NUMBER', '(' expected.\\\\ncurrent token: '$EOF'.',
  'tip': ''-', 'NUMBER', '(' expected.\\\\ncurrent token: '$EOF'.',
  'expected': [
    '-',
    'NUMBER',
    '('
  ],
  'symbol': 'exp',
  'lexer': {
    't': '$EOF',
    'text': '',
    'firstLine': 1,
    'firstColumn': 3,
    'lastLine': 1,
    'lastColumn': 3,
    'token': '$EOF',
    'start': 2,
    'end': 2
  }
}"
`;

exports[`llk add error recovery works 3`] = `
Object {
  "end": 2,
  "error": Object {
    "errorMessage": "syntax error at line 1:
1+
--^
'-', 'NUMBER', '(' expected.
current token: '$EOF'.",
    "expected": Array [
      "-",
      "NUMBER",
      "(",
    ],
    "lexer": Object {
      "end": 2,
      "firstColumn": 3,
      "firstLine": 1,
      "lastColumn": 3,
      "lastLine": 1,
      "start": 2,
      "t": "$EOF",
      "text": "",
      "token": "$EOF",
    },
    "recovery": true,
    "symbol": "exp",
    "tip": "'-', 'NUMBER', '(' expected.
current token: '$EOF'.",
  },
  "firstColumn": 3,
  "firstLine": 1,
  "lastColumn": 3,
  "lastLine": 1,
  "start": 2,
  "text": "",
  "token": "$EOF",
  "type": "token",
}
`;

exports[`llk add error recovery works: undefined 1`] = `undefined`;

exports[`llk ast works 1`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 4,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 1,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 2,
              'token': 'NUMBER',
              'type': 'token',
              'text': '1'
            }
          ],
          'ruleIndex': 4,
          'internalRuleIndex': 7,
          'id': 3,
          'isWrap': true
        },
        {
          'start': 1,
          'end': 2,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 2,
          'lastColumn': 3,
          'token': '+',
          'type': 'token',
          'text': '+'
        },
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'token': 'NUMBER',
              'type': 'token',
              'text': '2'
            }
          ],
          'ruleIndex': 4,
          'internalRuleIndex': 7,
          'id': 7,
          'isWrap': true
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 4,
      'id': 2,
      'isWrap': true
    },
    {
      'start': 3,
      'end': 4,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 4,
      'lastColumn': 5,
      'token': '+',
      'type': 'token',
      'text': '+'
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': 'NUMBER',
          'type': 'token',
          'text': '3'
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 7,
      'id': 12,
      'isWrap': true
    }
  ],
  'ruleIndex': 2,
  'internalRuleIndex': 4,
  'id': 16,
  'isWrap': true
}"
`;

exports[`llk ast works 2`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': 'NUMBER',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 7,
      'id': 3,
      'isWrap': true
    },
    {
      'start': 1,
      'end': 2,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 2,
      'lastColumn': 3,
      'token': '+',
      'type': 'token',
      'text': '+'
    },
    {
      'start': 2,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 6,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'token': 'NUMBER',
              'type': 'token',
              'text': '2'
            }
          ],
          'ruleIndex': 7,
          'internalRuleIndex': 9,
          'id': 8,
          'isWrap': true
        },
        {
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5,
          'token': '*',
          'type': 'token',
          'text': '*'
        },
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 4,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 6,
              'token': 'NUMBER',
              'type': 'token',
              'text': '3'
            }
          ],
          'ruleIndex': 7,
          'internalRuleIndex': 9,
          'id': 11,
          'isWrap': true
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 7,
      'id': 14,
      'isWrap': true
    }
  ],
  'ruleIndex': 2,
  'internalRuleIndex': 4,
  'id': 15,
  'isWrap': true
}"
`;

exports[`llk ast works 3`] = `
"{
  'start': 0,
  'end': 11,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 12,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 6,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 1,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 2,
              'token': 'NUMBER',
              'type': 'token',
              'text': '1'
            }
          ],
          'ruleIndex': 4,
          'internalRuleIndex': 7,
          'id': 3,
          'isWrap': true
        },
        {
          'start': 1,
          'end': 2,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 2,
          'lastColumn': 3,
          'token': '+',
          'type': 'token',
          'text': '+'
        },
        {
          'start': 2,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 6,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'symbol': 'exp',
              'type': 'symbol',
              'children': [
                {
                  'start': 2,
                  'end': 3,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 3,
                  'lastColumn': 4,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '2'
                }
              ],
              'ruleIndex': 7,
              'internalRuleIndex': 9,
              'id': 8,
              'isWrap': true
            },
            {
              'start': 3,
              'end': 4,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 4,
              'lastColumn': 5,
              'token': '*',
              'type': 'token',
              'text': '*'
            },
            {
              'start': 4,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 6,
              'symbol': 'exp',
              'type': 'symbol',
              'children': [
                {
                  'start': 4,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 5,
                  'lastColumn': 6,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '4'
                }
              ],
              'ruleIndex': 7,
              'internalRuleIndex': 9,
              'id': 11,
              'isWrap': true
            }
          ],
          'ruleIndex': 4,
          'internalRuleIndex': 7,
          'id': 14,
          'isWrap': true
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 4,
      'id': 2,
      'isWrap': true
    },
    {
      'start': 5,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 6,
      'lastColumn': 7,
      'token': '-',
      'type': 'token',
      'text': '-'
    },
    {
      'start': 6,
      'end': 11,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 12,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 6,
              'end': 7,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 7,
              'lastColumn': 8,
              'token': 'NUMBER',
              'type': 'token',
              'text': '5'
            }
          ],
          'ruleIndex': 6,
          'internalRuleIndex': 11,
          'id': 18,
          'isWrap': true
        },
        {
          'start': 7,
          'end': 8,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 8,
          'lastColumn': 9,
          'token': '^',
          'type': 'token',
          'text': '^'
        },
        {
          'start': 8,
          'end': 11,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 9,
          'lastColumn': 12,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 8,
              'end': 9,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 9,
              'lastColumn': 10,
              'symbol': 'exp',
              'type': 'symbol',
              'children': [
                {
                  'start': 8,
                  'end': 9,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 9,
                  'lastColumn': 10,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '2'
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 21,
              'isWrap': true
            },
            {
              'start': 9,
              'end': 10,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 10,
              'lastColumn': 11,
              'token': '^',
              'type': 'token',
              'text': '^'
            },
            {
              'start': 10,
              'end': 11,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 11,
              'lastColumn': 12,
              'symbol': 'exp',
              'type': 'symbol',
              'children': [
                {
                  'start': 10,
                  'end': 11,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 11,
                  'lastColumn': 12,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '3'
                }
              ],
              'ruleIndex': 7,
              'internalRuleIndex': 9,
              'id': 23,
              'isWrap': true
            }
          ],
          'ruleIndex': 7,
          'internalRuleIndex': 10,
          'id': 20
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 7,
      'id': 16,
      'isWrap': true
    }
  ],
  'ruleIndex': 2,
  'internalRuleIndex': 4,
  'id': 26,
  'isWrap': true
}"
`;

exports[`llk del error recovery works 1`] = `
Object {
  "end": 3,
  "error": Object {
    "errorMessage": "syntax error at line 1:
1+/2
--^
'-', 'NUMBER', '(' expected.
current token: '/'.",
    "expected": Array [
      "-",
      "NUMBER",
      "(",
    ],
    "lexer": Object {
      "end": 3,
      "firstColumn": 3,
      "firstLine": 1,
      "lastColumn": 4,
      "lastLine": 1,
      "start": 2,
      "t": "/",
      "text": "/",
      "token": "/",
    },
    "recovery": true,
    "symbol": "exp",
    "tip": "'-', 'NUMBER', '(' expected.
current token: '/'.",
  },
  "firstColumn": 3,
  "firstLine": 1,
  "lastColumn": 4,
  "lastLine": 1,
  "start": 2,
  "text": "/",
  "token": "/",
  "type": "token",
}
`;

exports[`llk error detection works 1`] = `
"{
  'start': 0,
  'end': 0,
  'firstLine': 1,
  'lastLine': 0,
  'firstColumn': 1,
  'lastColumn': 0,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': 'NUMBER',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 7,
      'id': 3,
      'isWrap': true
    },
    {
      'start': 1,
      'end': 2,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 2,
      'lastColumn': 3,
      'token': '+',
      'type': 'token',
      'text': '+'
    },
    {
      'start': 2,
      'end': 4,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 5,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'token': 'NUMBER',
              'type': 'token',
              'text': '2'
            }
          ],
          'ruleIndex': 7,
          'internalRuleIndex': 9,
          'id': 8,
          'isWrap': true
        },
        {
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5,
          'token': '*',
          'type': 'token',
          'text': '*'
        },
        {
          'start': 4,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 5,
          'token': '$EOF',
          'type': 'token',
          'error': {
            'recovery': false,
            'errorMessage': 'syntax error at line 1:\\\\n1+2*\\\\n----^\\\\n'-', 'NUMBER', '(' expected.\\\\ncurrent token: '$EOF'.',
            'tip': ''-', 'NUMBER', '(' expected.\\\\ncurrent token: '$EOF'.',
            'expected': [
              '-',
              'NUMBER',
              '('
            ],
            'symbol': 'exp',
            'lexer': {
              't': '$EOF',
              'text': '',
              'firstLine': 1,
              'firstColumn': 5,
              'lastLine': 1,
              'lastColumn': 5,
              'token': '$EOF',
              'start': 4,
              'end': 4
            }
          },
          'text': ''
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 7,
      'id': 7,
      'isWrap': true
    }
  ],
  'ruleIndex': 2,
  'internalRuleIndex': 4,
  'id': 2,
  'isWrap': true
}"
`;

exports[`llk error detection works 2`] = `
"{
  'start': 4,
  'end': 4,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 5,
  'lastColumn': 5,
  'token': '$EOF',
  'type': 'token',
  'error': {
    'recovery': false,
    'errorMessage': 'syntax error at line 1:\\\\n1+2*\\\\n----^\\\\n'-', 'NUMBER', '(' expected.\\\\ncurrent token: '$EOF'.',
    'tip': ''-', 'NUMBER', '(' expected.\\\\ncurrent token: '$EOF'.',
    'expected': [
      '-',
      'NUMBER',
      '('
    ],
    'symbol': 'exp',
    'lexer': {
      't': '$EOF',
      'text': '',
      'firstLine': 1,
      'firstColumn': 5,
      'lastLine': 1,
      'lastColumn': 5,
      'token': '$EOF',
      'start': 4,
      'end': 4
    }
  },
  'text': ''
}"
`;

exports[`llk lazy * symbol works 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'program',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 4
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 5
    },
    {
      'start': 6,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 8,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 6
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`llk lazy * symbol works 2`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'program',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 3
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 4
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 5
    },
    {
      'start': 6,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 8,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 6
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`llk lazy + symbol works 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'program',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 4
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 5
    },
    {
      'start': 6,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 8,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 6
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`llk lazy + symbol works 2`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'program',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 4
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 5
    },
    {
      'start': 6,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 8,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 6
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`llk lazy ? symbol works 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'program',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 4
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 5
    },
    {
      'start': 6,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 8,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 6
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`llk lazy ? symbol works 2`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'program',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 3
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 4
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 5
    },
    {
      'start': 6,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 8,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 3,
      'id': 6
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`llk look ahead more than one 1`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'program',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'symbol': 'exp2',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 1,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 2,
              'token': '1',
              'type': 'token',
              'text': '1'
            }
          ],
          'ruleIndex': 3,
          'internalRuleIndex': 3,
          'id': 4
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'token': '1',
      'type': 'token',
      'text': '1'
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'token': '1',
      'type': 'token',
      'text': '1'
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`llk onAction works 1`] = `
Array [
  Object {
    "left": Object {
      "left": 0,
      "op": " ",
      "right": Object {
        "left": 2,
        "op": "*",
        "right": 3,
        "v": 6,
      },
      "v": undefined,
    },
    "op": "-",
    "right": Object {
      "left": 2,
      "op": "^",
      "right": Object {
        "left": 1,
        "op": "^",
        "right": 3,
        "v": 1,
      },
      "v": 2,
    },
    "v": NaN,
  },
]
`;

exports[`llk support parse from startSymbol 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 's2',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 6,
      'internalRuleIndex': 6,
      'id': 2
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 6,
      'internalRuleIndex': 6,
      'id': 3
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 6,
      'internalRuleIndex': 6,
      'id': 4
    },
    {
      'start': 6,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 8,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 6,
      'internalRuleIndex': 6,
      'id': 5
    }
  ],
  'ruleIndex': 3,
  'internalRuleIndex': 3,
  'id': 1
}"
`;

exports[`llk support predict 1`] = `
"{
  'start': 0,
  'end': 0,
  'firstLine': 1,
  'lastLine': 0,
  'firstColumn': 1,
  'lastColumn': 0,
  'symbol': 'program',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 0,
      'firstLine': 1,
      'lastLine': 0,
      'firstColumn': 1,
      'lastColumn': 0,
      'symbol': 'sequence',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': 'NUMBER',
          'type': 'token',
          'text': '2'
        },
        {
          'start': 2,
          'end': 0,
          'firstLine': 1,
          'lastLine': 0,
          'firstColumn': 3,
          'lastColumn': 0,
          'symbol': 'sequence2',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'token': 'NUMBER',
              'type': 'token',
              'text': '1'
            },
            {
              'start': 4,
              'end': 0,
              'firstLine': 1,
              'lastLine': 0,
              'firstColumn': 5,
              'lastColumn': 0,
              'symbol': 'sequence2',
              'type': 'symbol',
              'children': [
                {
                  'start': 4,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 5,
                  'lastColumn': 6,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '1'
                },
                {
                  'start': 0,
                  'end': 0,
                  'firstLine': 0,
                  'lastLine': 0,
                  'firstColumn': 0,
                  'lastColumn': 0,
                  'symbol': 'sequence2',
                  'type': 'symbol',
                  'children': [],
                  'ruleIndex': 4,
                  'internalRuleIndex': 4,
                  'id': 6
                }
              ],
              'ruleIndex': 3,
              'internalRuleIndex': 3,
              'id': 5
            }
          ],
          'ruleIndex': 3,
          'internalRuleIndex': 3,
          'id': 4
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 6,
      'end': 0,
      'firstLine': 1,
      'lastLine': 0,
      'firstColumn': 7,
      'lastColumn': 0,
      'symbol': 'sequence',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': 'NUMBER',
          'type': 'token',
          'text': '3'
        },
        {
          'start': 8,
          'end': 0,
          'firstLine': 1,
          'lastLine': 0,
          'firstColumn': 9,
          'lastColumn': 0,
          'symbol': 'sequence2',
          'type': 'symbol',
          'children': [
            {
              'start': 8,
              'end': 9,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 9,
              'lastColumn': 10,
              'token': 'NUMBER',
              'type': 'token',
              'text': '1'
            },
            {
              'start': 10,
              'end': 0,
              'firstLine': 1,
              'lastLine': 0,
              'firstColumn': 11,
              'lastColumn': 0,
              'symbol': 'sequence2',
              'type': 'symbol',
              'children': [
                {
                  'start': 10,
                  'end': 11,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 11,
                  'lastColumn': 12,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '1'
                },
                {
                  'start': 12,
                  'end': 0,
                  'firstLine': 1,
                  'lastLine': 0,
                  'firstColumn': 13,
                  'lastColumn': 0,
                  'symbol': 'sequence2',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 12,
                      'end': 13,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 13,
                      'lastColumn': 14,
                      'token': 'NUMBER',
                      'type': 'token',
                      'text': '1'
                    },
                    {
                      'start': 0,
                      'end': 0,
                      'firstLine': 0,
                      'lastLine': 0,
                      'firstColumn': 0,
                      'lastColumn': 0,
                      'symbol': 'sequence2',
                      'type': 'symbol',
                      'children': [],
                      'ruleIndex': 4,
                      'internalRuleIndex': 4,
                      'id': 11
                    }
                  ],
                  'ruleIndex': 3,
                  'internalRuleIndex': 3,
                  'id': 10
                }
              ],
              'ruleIndex': 3,
              'internalRuleIndex': 3,
              'id': 9
            }
          ],
          'ruleIndex': 3,
          'internalRuleIndex': 3,
          'id': 8
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 7
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`llk support predict 2`] = `
Object {
  "errorMessage": "syntax error at line 1:
2 1 1 3 1 1 
------------^
'NUMBER' expected.
current token: '$EOF'.",
  "expected": Array [
    "NUMBER",
  ],
  "lexer": Object {
    "end": 12,
    "firstColumn": 13,
    "firstLine": 1,
    "lastColumn": 13,
    "lastLine": 1,
    "start": 12,
    "t": "$EOF",
    "text": "",
    "token": "$EOF",
  },
  "recovery": false,
  "symbol": "sequence2",
  "tip": "'NUMBER' expected.
current token: '$EOF'.",
}
`;
